Add link to 0.0.7 docs.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ performance with Roaring bitmaps</em></a>.</p>
 <h2>
 <a id="api-docs" class="anchor" href="#api-docs" aria-hidden="true"><span class="octicon octicon-link"></span></a>API Docs</h2>
 
-<blockquote>
-<p>Coming soon.</p>
-</blockquote>
+<ul>
+<li><a href="docs/0.0.7/roaring/">0.0.7</a></li>
+</ul>
       </section>
     </div>
 
