Tidy up index, add link to cargo

--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
   </head>
 
   <body>
-
     <header>
       <div class="container">
         <h1>Roaring bitmap for Rust</h1>
-        <h2></h2>
-
         <section id="downloads">
-          <a href="https://github.com/Nemo157/roaring-rs/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Nemo157/roaring-rs/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://crates.io/crates/roaring" class="btn btn-cargo"><span class="icon"></span>View on Cargo</a>
           <a href="https://github.com/Nemo157/roaring-rs" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
@@ -29,27 +25,26 @@
     <div class="container">
       <section id="main_content">
         <blockquote>
-<p>This is not yet production ready.</p>
-</blockquote>
+          <p>This is not yet production ready.</p>
+        </blockquote>
 
-<p>This is a <a href="https://rust-lang.org">Rust</a> port of the <a href="http://roaringbitmap.org">Roaring bitmap</a> data structure, initially
-defined as a <a href="https://github.com/lemire/RoaringBitmap">Java library</a> and described in <a href="http://arxiv.org/pdf/1402.6407v4"><em>Better bitmap
-performance with Roaring bitmaps</em></a>.</p>
+        <p>
+          This is a <a href="https://rust-lang.org">Rust</a> port of the <a href="http://roaringbitmap.org">Roaring bitmap</a> data structure,
+          initially defined as a <a href="https://github.com/lemire/RoaringBitmap">Java library</a>
+          and described in <a href="http://arxiv.org/pdf/1402.6407v4"><em>Better bitmap performance with Roaring bitmaps</em></a>.
+        </p>
 
-<h2>
-<a id="api-docs" class="anchor" href="#api-docs" aria-hidden="true"><span class="octicon octicon-link"></span></a>API Docs</h2>
+        <h2><a id="api-docs" class="anchor" href="#api-docs" aria-hidden="true"><span class="octicon octicon-link"></span></a>API Docs</h2>
 
-<ul>
+        <ul>
 <!-- DOCS INDEX -->
 <li><a href="docs/0.0.15/roaring/">0.0.15</a></li>
 <li><a href="docs/0.0.8/roaring/">0.0.8</a></li>
 <li><a href="docs/0.0.7/roaring/">0.0.7</a></li>
 <li><a href="docs/0.0.6/roaring/">0.0.6</a></li>
 <li><a href="docs/0.0.1/roaring/">0.0.1</a></li>
-</ul>
+        </ul>
       </section>
     </div>
-
-    
   </body>
 </html>
