--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Roaring bitmap for Rust</title>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Roaring bitmap for Rust by Nemo157</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-type">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://nemo157.com/css/app.css" type="text/css" media="screen" charset="utf-8"/>
   </head>
 
-  <body>
-    <header>
-      <div class="container">
-        <h1>Roaring bitmap for Rust</h1>
-        <section id="downloads">
-          <a href="https://crates.io/crates/roaring" class="btn btn-cargo"><span class="icon"></span>View on Cargo</a>
-          <a href="https://github.com/Nemo157/roaring-rs" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
+  <body class="dark">
+    <header class="header-small highlight">
+      <h1>Roaring bitmap for Rust</h1>
     </header>
 
-    <div class="container">
-      <section id="main_content">
-        <blockquote>
-          <p>This is not yet production ready.</p>
-        </blockquote>
+    <div class="content-wrapper">
+      <section class="content">
+        <section class="main-small">
+          <section class="views">
+            <span class="view-on">View on</span>
+            <a class="button" href="https://crates.io/crates/roaring"><span class="icon cargo"></span>Cargo</a>
+            <a class="button" href="https://github.com/Nemo157/roaring-rs"><span class="icon github"></span>GitHub</a>
+          </section>
 
-        <p>
-          This is a <a href="https://rust-lang.org">Rust</a> port of the <a href="http://roaringbitmap.org">Roaring bitmap</a> data structure,
-          initially defined as a <a href="https://github.com/lemire/RoaringBitmap">Java library</a>
-          and described in <a href="http://arxiv.org/pdf/1402.6407v4"><em>Better bitmap performance with Roaring bitmaps</em></a>.
-        </p>
+          <h2>Warning</h2>
 
-        <h2><a id="api-docs" class="anchor" href="#api-docs" aria-hidden="true"><span class="octicon octicon-link"></span></a>API Docs</h2>
+          <blockquote>
+            <strong>This is not yet production ready.</strong>
+          </blockquote>
 
-        <ul>
-<!-- DOCS INDEX -->
-<li><a href="docs/0.3.2/roaring/">0.3.2</a></li>
-<li><a href="docs/0.3.1/roaring/">0.3.1</a></li>
-<li><a href="docs/0.2.2/roaring/">0.2.2</a></li>
-<li><a href="docs/0.2.1/roaring/">0.2.1</a></li>
-<li><a href="docs/0.2.0/roaring/">0.2.0</a></li>
-<li><a href="docs/0.1.0/roaring/">0.1.0</a></li>
-<li><a href="docs/0.0.15/roaring/">0.0.15</a></li>
-<li><a href="docs/0.0.8/roaring/">0.0.8</a></li>
-<li><a href="docs/0.0.7/roaring/">0.0.7</a></li>
-<li><a href="docs/0.0.6/roaring/">0.0.6</a></li>
-<li><a href="docs/0.0.1/roaring/">0.0.1</a></li>
-        </ul>
+          <h2>About</h2>
+
+          <p>
+            This is a <a href="https://rust-lang.org">Rust</a> port of the <a href="http://roaringbitmap.org">Roaring bitmap</a> data structure,
+            initially defined as a <a href="https://github.com/lemire/RoaringBitmap">Java library</a>
+            and described in <a href="http://arxiv.org/pdf/1402.6407v4"><em>Better bitmap performance with Roaring bitmaps</em></a>.
+          </p>
+        </section>
+
+        <section class="docs">
+          <h2>Docs</h2>
+          <ul>
+            <!-- DOCS INDEX -->
+            <li><a href="docs/0.3.2/roaring/">0.3.2</a></li>
+            <li><a href="docs/0.3.1/roaring/">0.3.1</a></li>
+            <li><a href="docs/0.2.2/roaring/">0.2.2</a></li>
+            <li><a href="docs/0.2.1/roaring/">0.2.1</a></li>
+            <li><a href="docs/0.2.0/roaring/">0.2.0</a></li>
+            <li><a href="docs/0.1.0/roaring/">0.1.0</a></li>
+            <li><a href="docs/0.0.15/roaring/">0.0.15</a></li>
+            <li><a href="docs/0.0.8/roaring/">0.0.8</a></li>
+            <li><a href="docs/0.0.7/roaring/">0.0.7</a></li>
+            <li><a href="docs/0.0.6/roaring/">0.0.6</a></li>
+            <li><a href="docs/0.0.1/roaring/">0.0.1</a></li>
+          </ul>
+        </section>
+
+        <div class="u-cf"></div>
       </section>
     </div>
   </body>
